@@ -1,3 +1,7 @@
+    Removed deprecated support for a float value as a gray-scale;
+    now it must be a string, like '0.5'.  Added alpha kwarg to
+    ColorConverter.to_rgba_list.
+
     New method set_bounds(vmin, vmax) for formatters, locators sets
     the viewInterval and dataInterval from floats.
 
