@@ -1,4 +1,8 @@
-2007-04-06 Fixed rotation of ellipses in pdf backend 
+2007-04-06 Removed deprecated support for a float value as a gray-scale;
+           now it must be a string, like '0.5'.  Added alpha kwarg to
+           ColorConverter.to_rgba_list. - EF
+
+2007-04-06 Fixed rotation of ellipses in pdf backend
            (sf bug #1690559) -JKS
 
 2007-04-04 More matshow tweaks; documentation updates; new method
